// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiles to markdown 1`] = `
"_abbr_ HTML

> HTML inside quote

*[abbr]: abbreviation
*[HTML]: HyperText Markup Language"
`;

exports[`no reference 1`] = `"<p>No reference!</p>"`;

exports[`passes the first regression test 1`] = `
"<p>The <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr> specification is maintained by the <abbr title=\\"World Wide Web Consortium\\">W3C</abbr>:<a href=\\"https://w3c.github.io/html/\\">link</a>, this line had an abbr before link.</p>
<p>A line with <a href=\\"http://example.com\\">a link</a> before an abbr: <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr>.</p>"
`;

exports[`passes the retro test 1`] = `
"<p>An <abbr title=\\"Abbreviation\\">ABBR</abbr>: \\"<abbr title=\\"Reference\\">REF</abbr>\\", ref and REFERENCE should be ignored.</p>
<p>The <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr> specification is maintained by the <abbr title=\\"World Wide Web Consortium\\">W3C</abbr>.</p>"
`;

exports[`passes the retro test 2`] = `
"An ABBR: \\"REF\\", ref and REFERENCE should be ignored.

The HTML specification is maintained by the W3C.

*[ABBR]: Abbreviation
*[REF]: Reference
*[HTML]: Hyper Text Markup Language
*[W3C]: World Wide Web Consortium"
`;

exports[`passes the second regression test 1`] = `
"<p>The <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr> specification is maintained by the <abbr title=\\"World Wide Web Consortium\\">W3C</abbr>:<a href=\\"https://w3c.github.io/html/\\">link</a>, this line had an abbr before <strong>link</strong> <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr>.</p>
<p>A line with <a href=\\"http://example.com\\">a link</a> before an abbr: <abbr title=\\"Hyper Text Markup Language\\">HTML</abbr>.</p>"
`;

exports[`renders references 1`] = `
"<p>This is an abbreviation: <abbr title=\\"Reference\\">REF</abbr>.
ref and REFERENCE should be ignored.</p>
<p>Here is another one in a link: <a href=\\"http://example.com\\"><abbr title=\\"Reference\\">FOO</abbr></a>.</p>
<p>Here is the first one in a link: <a href=\\"http://example.com\\"><abbr title=\\"Reference\\">REF</abbr></a>.</p>"
`;
